# starnetGUI

./: README.md  components.d.ts  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  windi.config.ts
.github/workflow/: publish.yml
.github/workflows/: covector-version-or-publish.yml  publish.yml
src/: App.vue  env.d.ts  main.ts  store.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: Loading.vue  Starnet.vue
