[package]
name = "starnet-gui"
version = "0.5.3"
description = "GUI for StarNet"
authors = ["Ripwords"]
license = ""
repository = "https://github.com/Ripwords/starnetGUI"
default-run = "starnet-gui"
edition = "2018"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.0-beta.4" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.0-beta.8", features = ["dialog-open", "fs-copy-file", "fs-remove-file", "os-all", "path-all", "shell-all", "updater"] }

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
